[package]
name = "ch32v203-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ch32v2 = { path = "../ch32-rs-nightlies/ch32v2", features = [
    "ch32v20x",
    "critical-section",
] }
# provide implementation for critical-section
riscv = { version = "0.10.0", features = ["critical-section-single-hart"] }
riscv-rt = "0.10"
panic-halt = "0.2.0"

embedded-hal = "1.0.0-alpha.9"
